# DES-Algorithm-implementation-in-C

./: CMakeLists.txt  README.md
src/: main.c
src/lib/: CMakeLists.txt  DES.c  convert.c  display.c
src/lib/includes/: DES.h  convert.h  display.h
src/txt/: cipherHex.txt
src/txt/outputs/: decrypted.txt  decryptedHex.txt  inputHex.txt
